# Endure_robotics

./: Airport_navigation_Documentation.odt  Graphical User Interface.docx  Graphical User Interface.odt  README.md  fake_camera_publisher.py  start_robot.sh
airport_navigation_ws/: docschatgpt.txt  interface.txt  readme
airport_navigation_ws/airport_navigation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
airport_navigation_ws/airport_navigation/airport_navigation/: destination_node.py  diagnostics_node.py  dummy_origin_publisher.py  gnss_source_node.py  marker_viz_node.py  navigation_node.py  pose_publisher_node.py  route_manager_node.py  rviz_debug_node.py
airport_navigation_ws/airport_navigation/config/: airport_nav.rviz  locations.yaml  navigation_params.yaml
airport_navigation_ws/airport_navigation/launch/: dynamic_nav_launch.py
airport_navigation_ws/airport_navigation/resource/: airport_navigation
airport_navigation_ws/airport_navigation_interfaces/: CMakeLists.txt  package.xml
airport_navigation_ws/airport_navigation_interfaces/msg/: CustomWaypoint.msg  GNSSOrigin.msg
airport_navigation_ws/airport_navigation_interfaces/srv/: SetDestination.srv  SetRoute.srv
airport_navigation_ws/robot_controls/: package.xml  setup.cfg  setup.py
airport_navigation_ws/robot_controls/launch/: manual_control_launch.py
airport_navigation_ws/web_ui/: app.js  config.js  index.html  search.js  styles.css
object_detection_test/: package.xml  setup.cfg  setup.py
object_detection_test/launch/: test_detection.launch.py
object_detection_test/object_detection_test/: Dependency_packages.txt  fake_camera_publisher.py  object_detector.py
robot_ui_launcher_ws/: Readme  Untitled Document 1  start_server.sh  stream_launcher.py  ui_server.py  zed_mjpeg_stream.py
robot_ui_launcher_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robot_ui_launcher_ws/static/: app.js  manual_control.js  styles.css
robot_ui_launcher_ws/templates/: index.html  manual_control.html  stream.html
