<?xml version="1.0"?>
<package format="3">
  <name>airport_navigation</name>
  <version>0.0.0</version>
  <description>Airport navigation package</description>

  <maintainer email="yaswanthkumarsingampalli77@gmail.com">Yaswanth</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>airport_navigation_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
