<?xml version="1.0"?>
<package format="3">
  <name>airport_navigation</name>
  <version>0.1.0</version>
  <description>Advanced real-time autonomous robot navigation using GNSS and named destination services</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>airport_navigation_interfaces</exec_depend>

  <exec_depend>pyproj</exec_depend>
  <exec_depend>requests</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
