<?xml version="1.0"?>
<package format="3">
  <name>airport_navigation_interfaces</name>
  <version>0.1.0</version>
  <description>Custom service interfaces for airport navigation</description>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

